--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://ayemae.github.io/my-portfolio/",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "homepage": "http://ayemae.github.io/my-portfolio"
+    "homepage": "http://ayemae.github.io/my-portfolio/"
   },
   "scripts": {
     "start": "react-scripts start",
